--- a/07_Day_Functions/07_day_starter/index.html
+++ b/07_Day_Functions/07_day_starter/index.html
@@ -11,6 +11,7 @@
 
 	<script src="./data/countries.js"></script>
 	<script src="./scripts/main.js"></script>
+	<script src="./scripts/day7.js"></script>
 
 </body>
 
